[package]
name = "rust-raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

kdam = "0.4.0"
png_encode_mini = "0.1.2"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0"

space_alg = { version = "0.1.0", path = "../space_alg" }

